styles.css
@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap");
footer nav .footer-nav, footer nav .social {
  list-style: none;
  padding: 0;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  padding-bottom: 10%;
}

.container {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr;
      grid-template-columns: 1fr;
  -ms-grid-rows: 700px (1fr)[3];
      grid-template-rows: 700px repeat(3, 1fr);
      grid-template-areas: "head" "main" "images" "footer";
  margin: 0;
  width: 100vw;
  height: 100vh;
}

.container img {
  max-width: 100%;
  display: block;
}

header {
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  grid-area: head;
  background-image: url("images/mobile/image-header.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
}

header nav {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  margin-top: 7%;
}

header nav .logo {
  margin-left: 6%;
}

header nav .burger {
  margin-right: 6%;
}

header .toggle-menu {
  display: none;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  position: absolute;
  width: 89%;
  left: 5%;
  top: 20%;
  padding: 0;
  background-color: white;
}

header .toggle-menu .right-nav {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

header .toggle-menu li {
  padding-top: 10%;
  padding-bottom: 10%;
}

header .toggle-menu li a {
  text-decoration: none;
  font-family: "Barlow", sans-serif;
  color: #818498;
}

header .toggle-menu li a:hover {
  color: #23303e;
}

header .toggle-menu li .button {
  background-color: #fad400;
  border: none;
  border-radius: 25px;
  color: #23303e;
  padding: 15px 32px;
  font-family: "Fraunces", serif;
  text-transform: uppercase;
  text-align: center;
}

header .toggle-menu li .button:hover {
  background-color: #fad400;
  color: white;
}

header .title {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

header .title h1 {
  text-transform: uppercase;
  text-align: center;
  font-family: "Fraunces", serif;
  color: white;
  letter-spacing: 10px;
  font-size: 300%;
  padding-top: 30%;
  padding-bottom: 5%;
}

main {
  -ms-grid-row: 2;
  -ms-grid-column: 1;
  grid-area: main;
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr;
      grid-template-columns: 1fr;
  -ms-grid-rows: (0.1fr)[7];
      grid-template-rows: repeat(7, 0.1fr);
      grid-template-areas: "egg" "brand" "wine" "standout" "graphic" "photo" "feedback";
}

main .egg {
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  grid-area: egg;
}

main .brand {
  -ms-grid-row: 2;
  -ms-grid-column: 1;
  grid-area: brand;
  -ms-grid-column-align: center;
      justify-self: center;
  -ms-flex-item-align: center;
      -ms-grid-row-align: center;
      align-self: center;
  text-align: center;
  line-height: 170%;
  padding: 10% 0 10% 0;
  width: 75%;
}

main .brand p {
  color: #818498;
  font-size: 1.1rem;
}

main .brand h2 {
  font-size: 200%;
  font-weight: 900;
  line-height: 130%;
}

main .brand h2, main .brand .learn {
  font-family: "Fraunces", serif;
  color: #23303e;
}

main .brand .learn {
  text-decoration: none;
  text-transform: uppercase;
  border-radius: 7%;
  border-bottom: 5px solid rgba(250, 212, 0, 0.3);
}

main .brand .learn:hover {
  border-bottom: 5px solid #fad400;
}

main .glass {
  -ms-grid-row: 3;
  -ms-grid-column: 1;
  grid-area: wine;
}

main .standout {
  -ms-grid-row: 4;
  -ms-grid-column: 1;
  grid-area: standout;
  -ms-grid-column-align: center;
      justify-self: center;
  -ms-flex-item-align: center;
      -ms-grid-row-align: center;
      align-self: center;
  text-align: center;
  line-height: 170%;
  padding: 10% 0 10% 0;
  width: 75%;
}

main .standout p {
  color: #818498;
  font-size: 1.1rem;
}

main .standout h2 {
  font-size: 200%;
  font-weight: 900;
  line-height: 130%;
}

main .standout h2, main .standout .learn {
  font-family: "Fraunces", serif;
  color: #23303e;
}

main .standout .learn {
  text-decoration: none;
  text-transform: uppercase;
  border-radius: 7%;
  border-bottom: 5px solid rgba(254, 120, 103, 0.3);
}

main .standout .learn:hover {
  border-bottom: 5px solid #fe7867;
}

main .graphic {
  -ms-grid-row: 5;
  -ms-grid-column: 1;
  grid-area: graphic;
}

main .graphic .text-overlay {
  color: #25564b;
  position: absolute;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  text-align: center;
  padding: 5%;
  line-height: 1.7em;
  margin-top: 90%;
}

main .graphic h3 {
  font-family: "Fraunces", serif;
  font-size: 1.8rem;
}

main .graphic p {
  font-family: "Barlow", sans-serif;
  opacity: 0.7;
}

main .photo {
  -ms-grid-row: 6;
  -ms-grid-column: 1;
  grid-area: photo;
}
/* ... */

